# epd-ble-sender

./: .gitignore  README.md  README_zh-CN.md  pyproject.toml  requirements.txt
epd_ble_sender/: main.py
src/: main.py
